--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.box-content{
+    display: flex;
+    justify-content: space-around;
+}
+
+.box{
+    min-width: 200px;
+    min-height: 200px;
+    background-image: url(https://picsum.photos/200/300);
+    background-repeat: no-repeat;
+    margin: 10px;
+}
+
+li{
+    list-style: none;
+}
